# AdbPilot

./: .gitignore  plant.md  pyproject.toml  readme.md  run_gui.bat
.github/workflows/: publish-apk-artifact.yml  release.yml
adbpilot/: __init__.py  ai_cli.py  cli.py  client.py  errors.py  gui.py  macos_floating_helper.swift  models.py  platform_adapter.py
docs/superpowers/plans/: 2026-06-30-floating-window-topmost-lock.md
docs/superpowers/specs/: 2026-06-30-floating-window-topmost-lock-design.md
packaging/entrypoints/: adbpilot_gui.py
packaging/macos/: AdbPilot.spec  README.md  build_macos.sh
packaging/scripts/: bump_version.py
packaging/windows/: README.md  build_windows.ps1  file_version_info.txt
tests/: test_ai_cli.py  test_client.py  test_gui_helpers.py  test_platform_adapter.py  test_versioning.py
