[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adbpilot"
version = "0.0.1"
description = "Cross-platform ADB device management CLI"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
  "tkinterdnd2>=0.4.3; platform_system == 'Windows'"
]
authors = [
  { name = "AdbPilot Contributors" }
]
license = { text = "MIT" }
keywords = ["adb", "android", "debug", "cli", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Utilities"
]

[project.scripts]
adbpilot = "adbpilot.cli:main"
adbpilot-ai = "adbpilot.ai_cli:main"

[project.gui-scripts]
adbpilot-gui = "adbpilot.gui:main"

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0"
]

[tool.setuptools.packages.find]
include = ["adbpilot*"]
